se quita la faya

--- a/Atlas/widgets/IndicadoresRiesgo/config.json
+++ b/Atlas/widgets/IndicadoresRiesgo/config.json
@@ -35,7 +35,7 @@
     "camposDeclaratorias": {
         "D_desbordes": "Desbordamientos",
         "D_deslizamiento": "Deslizamientos",
-        "D_Faya": "Fayas",
+        "D_Faya": "Fallas",
         "D_Geologica": "Geológicas",
         "D_Inindaciones": "Inundaciones"
     }
